--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a02-functions-cheestov/issues"
   },
-  "homepage": "https://github.com/comp426-2023-spring/a02-functions-cheestov#readme",
-  "dependencies": {
-    "minimist": "^1.2.7",
-    "moment-timezone": "^0.5.40",
-    "node-fetch": "^3.3.0"
-  }
+  "bin": {
+    "galosh.js": "./cli.js"
+  },
+  "homepage": "https://github.com/comp426-2023-spring/a02-functions-cheestov#readme"
 }
