--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bin": {
     "galosh.js": "./cli.js"
   },
-  "homepage": "https://github.com/comp426-2023-spring/a02-functions-cheestov#readme"
+  "homepage": "https://github.com/comp426-2023-spring/a02-functions-cheestov#readme",
+  "dependencies": {
+    "minimist": "^1.2.7",
+    "moment-timezone": "^0.5.40",
+    "node-fetch": "^3.3.0"
+  }
 }
