--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "a02_comp426",
   "version": "1.0.0",
   "description": "a02 assignment for web programming ",
-  "main": "index.js",
+  "main": "cli.js",
+  "type": "module",
+  "bin": {
+    "galosh.js": "./cli.js"
+  },
   "scripts": {
     "test": "node cli.js -n 35.92 -w 79.05 -z America/New_York"
   },
@@ -15,13 +19,11 @@
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a02-functions-cheestov/issues"
   },
-  "bin": {
-    "galosh.js": "./cli.js"
-  },
   "homepage": "https://github.com/comp426-2023-spring/a02-functions-cheestov#readme",
   "dependencies": {
     "minimist": "^1.2.7",
     "moment-timezone": "^0.5.40",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "process": "^0.11.10"
   }
 }
